# ecbpf

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Makefile.docker  README.md  Vagrantfile  build.sh  tags.sh
.devcontainer/: devcontainer.json
bypass_ipvs/: .gitignore  CMakeLists.txt  elf_notype_mutator.c  elfmapmod.c  nop_kern.c  xdp_bypass_ipvs_common.h  xdp_bypass_ipvs_tc_kern.c  xdp_bypass_ipvs_user.c  xdp_bypass_ipvs_xdp_kern.c
docs/adr/: adr_arista_lldp_vlan.md  adr_template.md
docs/img/: architecture.dot  xdp_flow.dot
ext/xdp-sampler-common/: Dockerfile  README.md
ext/xdp-sampler-common/protodata/: README.md
ext/xdp-sampler-common/protodata/packet_sample/: packet_sample.pb.go  packet_sample.proto
ext/xdp-sampler-common/protodata/pktstash_rpc/: pktstash_rpc.pb.go  pktstash_rpc.proto  pktstash_rpc_grpc.pb.go
libecbpf/: CMakeLists.txt  libecbpf.c  libecbpf.h  libecbpf_config.h.in  libecbpf_elf.c  libecbpf_internal.h  libecbpf_kern.h  rootmaps.h  xdp_return_codes.h  xdp_sampler.h  xdp_sampler_client.h  xdp_stats.h
libecbpf/docs/: Doxyfile
scripts/: CMakeLists.txt  ecbpf-bypass-stats.service  ecbpf-bypass.service  ecbpf-filter.service  ecbpf-root.service  ecbpf-sampler.service  ecbpf_service_handler_generic.py  postinst  service.conf.example  test-skip-vlan-check.conf  test_ecbpf_service_handler.py  test_ecbpf_service_handler_data.py
tests/: CMakeLists.txt  README.md  stats.py  test_xdp_root.c
vpop/: README  Vagrantfile
xdp_filter/: CMakeLists.txt  README.md  config.c  config.h  ip_chain.c  ip_chain.h  maps.c  maps.h  stats.c  stats.h  test.sh  xdp_filter.c  xdp_filter.h  xdp_filter_kern.c
xdp_fw/: .gitignore  CMakeLists.txt  README.md  cfg.c  cfg.h  hash.c  hash.h  parse.y  rules.c  rules.h  rules_scan.l  test.c  test.h  test.sh  xdp_fw.c  xdp_fw.h  xdp_fw_kern.c
xdp_fw/tests/: all.pcapng  host-test.rules  ip-addr.rules  ip-any-icmp-any.rules  ip-any-icmp-code.rules  ip-any-tcp-syn-psh.rules  ip-any-tcp-syn.rules  ip-any-tcp.rules  ip-length.rules  ip46-any-tcp-ack.rules  ip46-any-tcp-port.rules  ip46-any-tcp-syn-psh.rules  ip46-any-tcp-window.rules  ip46-any-udp-port.rules  ip46-specific.rules  ip46-ttl.rules  ip6-addr.rules  ip6-any-icmp6-any.rules  ip6-any-icmp6-code.rules  ip6-any-tcp-syn.rules  ip6-any-tcp.rules  ip6-length.rules
xdp_printk/: CMakeLists.txt  xdp_printk.c  xdp_printk.h  xdp_printk_kern.c
xdp_root/: CMakeLists.txt  test.sh  xdp_root_kern.c  xdp_root_loader.c  xdp_root_nop_kern.c
xdp_sampler/: .gitignore  CMakeLists.txt  README.md  configuration.c  configuration.h  sampler_iperf_test.sh  stats.c  stats.h  test.sh  xdp_sampler.c  xdp_sampler_to_pcap.c  xzmq.c  xzmq.h
